# blackbody

./: .flake8  .pre-commit-config.yaml  404.html  LICENSE  README.md  hatch.toml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: docs.yaml  main.yaml
api/: index.html
docs/: api.md  index.md
examples/: Makefile  mplstyle
examples/example-01/: example-01.py
examples/example-02/: example-02.py
requirements/: Makefile  dev-requirements.in  dev-requirements.txt  setup.txt
search/: search_index.json
src/blackbody/: __init__.py  __init__.pyi  _constants.py  _constants.pyi  _planck.py  _planck.pyi
tests/: test_blackbody.py  test_constants.py  test_examples.py
