[metadata]
name = blackbody
version = 0.0.1
author = Jamal I. Mustafa
author_email = jimustafa@gmail.com
description = A Python library for computing blackbody radiation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jimustafa/blackbody
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.extras_require]
examples = matplotlib

[options.packages.find]
where = src
